--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
 language: node_js
 node_js:
 - "node"
+script:
+- echo "toto est pas beau"
+- npm update
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $TokenGithub
+  keep_history: true
+  local-dir:out
+  on:
+    branch: master
